--- a/docs/changes/units/19024.feature.rst
+++ b/docs/changes/units/19024.feature.rst
@@ -1,2 +1,3 @@
-Added ``@units.quantity_ufunc_overload`` decorator to allow users to define
-unit-aware Numpy ``ufunc`` instances.
+Added ``@units.quantity_overload`` decorator which allows instances of
+`~astropy.units.Quantity` to be used with functions designed to use instances
+of `numpy.ndarray`.
