--- a/docs/changes/table/19173.feature.rst
+++ b/docs/changes/table/19173.feature.rst
@@ -1,3 +1,4 @@
 Enable conversion of tables with multidimensional columns to pandas DataFrames:
 
-* Previously, ``to_pandas()`` would raise a ``ValueError`` for columns containing lists or arrays (for example, ``[[1, 2], [3, 4]]``). Now these columns are automatically converted to 1D object arrays compatible with pandas.
+* Previously, ``to_pandas()`` and ``to_df()`` would raise a ``ValueError`` for columns containing lists or arrays (for example, ``[[1, 2], [3, 4]]``).
+* Now these columns are automatically converted to 1D object arrays compatible with pandas.
