--- a/docs/changes/perf/19223.perf.rst
+++ b/docs/changes/perf/19223.perf.rst
@@ -1,2 +1,1 @@
-Improved performance of scalar ``Quantity`` arithmetic by avoiding the generic
-arithmetic path for scalar operations.
+Speed up scalar Quantity multiplication by avoiding unnecessary array creation.
