Apply suggestions from code review
In particular, this removes the auto-identify for MESA as requested by taldcroft.
I've decided to not squash commits so that the feature stays available in the git history, should we decide in the future that we need it.

--- a/docs/changes/io.ascii/19125.feature.rst
+++ b/docs/changes/io.ascii/19125.feature.rst
@@ -1,1 +1,4 @@
-Add ``ascii.mesa`` as a table type to read MESA history and profile output files.
+Add a new ``io.ascii`` format ``mesa`` to read history and profile output files from
+`MESA <https://mesastar.org>`_, a well-known code for stellar evolution
+calculations.
+
