Add MESA output format (#19125)
* Add MESA stellar evolution code file format reader

This commit adds read-only support for MESA (Modules for Experiments in
Stellar Astrophysics) history and profile files to astropy.io.ascii.

Features:
- Automatic format detection via filename patterns (history*.data, profile*.data)
- Metadata extraction from header section stored in table.meta['header']
- Automatic detection and removal of restart artifacts in history files
- Optional parameter to keep all rows including restart artifacts

MESA files have a specific format with:
- Lines 0-2: Metadata (column indices, names, values)
- Line 3: Blank line
- Lines 4-5: Data table column indices and names
- Lines 6+: Data rows (whitespace-delimited, 40-char width fields)

When a MESA run is restarted from an earlier model, the history file
contains duplicate model numbers. By default, this reader detects and
removes the earlier instances by checking for non-monotonic model_number
values, resulting in clean monotonic data suitable for analysis and plotting.

Users can disable this behavior with remove_restart_rows=False to access
all rows including restart artifacts.

Add MESA format to documentation

Added MESA stellar evolution code output format to:
- Unified table I/O documentation (unified_table.rst and unified_table_text.rst)
- ASCII module main documentation (ascii/index.rst)
- Extension reader classes list (ascii/extension_classes.rst)

MESA format is documented as read-only (.data files) and placed
alphabetically between Latex and MRT formats in all lists and tables.

* Update usage example to use unified table interface and make doctest.

Address more review requests.

* Enhance MESA file identification.

Instead of just relying on file name hints, validate structure of initial lines and check for existence of important (though not mandatory) column names for history (`model_number`) and profile (`zone`) files. Enhance testing to check for file name rejection, data format rej

--- a/docs/whatsnew/8.0.rst
+++ b/docs/whatsnew/8.0.rst
@@ -128,3 +128,9 @@ CODATA 2022 is now default in constants
 CODATA 2022 has replaced CODATA 2018 as default. ``astropyconst80`` is
 available for ``constants`` science state, combining CODATA 2022 with
 IAU 2015. To use previous version of CODATA, see :ref:`astropy-constants-prior`.
+
+
+Table formats
+=============
+A new table reader has been added to read history and profile output files from `MESA
+<https://mesastar.org>`_, a well-known code for stellar evolution calculations.
