Simplify code and shorten changelog per review

--- a/docs/changes/coordinates/19308.bugfix.rst
+++ b/docs/changes/coordinates/19308.bugfix.rst
@@ -1,4 +1,2 @@
 Fixed a broadcasting bug in ``astropy.uncertainty.distributions.uniform`` where
-multi-dimensional inputs (``ndim >= 2``) could raise a ``ValueError`` due to
-incorrect insertion of the sampling axis. The sampling axis is now appended
-to the end of the input shape, consistent with ``normal`` and ``poisson``.
+multi-dimensional inputs (``ndim >= 2``) would raise a ``ValueError``.
